# rego_git

./: README.md  data.json  domain.rego  policy.cedar  policy.rego  pyproject.toml
rego_data/: data.json  testing.rego
src/rego_git/: __init__.py
